# mini-world

./: .gitignore  Cargo.toml  README.md  framework.drawio
docker/: docker-compose.yaml
docker/node/: Dockerfile
docker/screeps-server/: Dockerfile
javascript/: main.js
src/: creep_composition.rs  creep_manager.rs  creep_target.rs  lib.rs  link_manager.rs  logging.rs
